--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
 			<version>16.0.1</version>
 		</dependency>
 
+
+		<!--Bukkit API -->
+		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>1.14.3-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!--Spigot API and NMS -->
 		<dependency>
 			<groupId>org.spigotmc</groupId>
